--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,27 +6,36 @@ authors = [
     {name = "John Curcio",email = "john.leonardo.curcion@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "^3.10"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
+    "numpy (>=1.23.2,<2.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "jupyter (>=1.1.1,<2.0.0)",
     "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
-    "ipython (>=9.0.2,<10.0.0)",
-    "mmengine (>=0.10.7,<0.11.0)",
-    "mmdet (>=3.3.0,<4.0.0)",
+    "ipython (<9.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "playwright (>=1.52.0,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "selenium (>=4.33.0,<5.0.0)",
     "webdriver-manager (>=4.0.2,<5.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "yt-dlp (>=2025.6.30,<2026.0.0)"
+    "yt-dlp (>=2025.6.30,<2026.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "torch @ https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
+    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
+    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl"
+    # "xformers @ https://download.pytorch.org/whl/cu121/xformers-0.0.28-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=57d6d85aeee49519894c6ec6f9e7e11be1d5d1d91d25173042e3f1c4d972fc7d",
 ]
 
 [tool.poetry.dependencies]
+python = "^3.10"
+numpy = "^1.23.2"
+torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
+torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
+torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
+xformers = { url = "https://download.pytorch.org/whl/rocm6.3/xformers-0.0.30-cp310-cp310-manylinux_2_28_x86_64.whl"}
 depth_anything_v2 = { git = "https://github.com/DepthAnything/Depth-Anything-V2.git", branch = "main" }
-
 
 [tool.poetry]
 packages = [
@@ -34,7 +43,6 @@ packages = [
 ]
 [tool.poetry.group.dev.dependencies]
 matplotlib = "^3.10.1"
-seaborn = "^0.13.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
