--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "torch @ https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
     "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
-    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl"
-    # "xformers @ https://download.pytorch.org/whl/cu121/xformers-0.0.28-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=57d6d85aeee49519894c6ec6f9e7e11be1d5d1d91d25173042e3f1c4d972fc7d",
+    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 [tool.poetry.dependencies]
