--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "grepl"
+name = "grepl_scraper"
 version = "0.1.0"
 description = "sports metric learning"
 authors = [
@@ -22,20 +22,12 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "yt-dlp (>=2025.6.30,<2026.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "torch @ https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
-    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
-    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl",
     "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 numpy = "^1.23.2"
-torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
-torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
-torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.18.1%2Bcu121-cp310-cp310-linux_x86_64.whl"}
-xformers = { url = "https://download.pytorch.org/whl/rocm6.3/xformers-0.0.30-cp310-cp310-manylinux_2_28_x86_64.whl"}
-depth_anything_v2 = { git = "https://github.com/DepthAnything/Depth-Anything-V2.git", branch = "main" }
 
 [tool.poetry]
 packages = [
